--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "weapon-parser"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
+authors = ["Kreedzt"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,3 +12,4 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
 csv = "1.1"
 encoding_rs = "0.8.30"
+structopt = { version = "0.3", default-features = false }
