--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ structopt = { version = "0.3", default-features = false }
 quick-xml = { version = "0.22.0" }
 indicatif = "0.16.2"
 regex = "1.5.5"
+anyhow = "1.0.57"
